<resources>
    <string name="app_name">Bliss</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email_id">Email</string>
    <string name="phone_number">Phone no.</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="calculate">Calculate</string>
    <string name="activity">Activity</string>
    <string name="breathing_exercise_1">4–7–8 Breath Relaxation Exercise</string>
    <string name="breathing_exercise_2">Breath Focus Exercise</string>
    <string name="breathing_exercise_3">Alternate nostril breathing (Nadi Shodhan Pranayama)</string>
    <string name="bmi_count"><![CDATA[Underweight = <18.5 Normal weight = 18.5–24.9 Overweight = 25–29.9 Obesity = BMI of 30 or greater]]></string>
    <string-array name="activities">
        <item>Basal Metabolic Rate(BMR)</item>
        <item>Sedentry: Little or no exercise</item>
        <item>Light: Exercise 1-3 times/week</item>
        <item>Moderate: Exercise 4-5 times/week</item>
        <item>Active: Daily exercise or intense exercise 3-4 times/week</item>
        <item>Very active: Intense exercise 6-7 times/week</item>
        <item>Extra Active: very intense exercise daily, or physical job</item>
    </string-array>
</resources>
