<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Breathing_technique">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/exercise3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/breathing_exercise_3"
            android:fontFamily="@font/sofia_pro_bold"
            android:textColor="#FDFDFD"
            android:background="@drawable/round_button" />

        <Button
            android:id="@+id/exercise1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/round_button"
            android:text="@string/breathing_exercise_1"
            android:fontFamily="@font/sofia_pro_bold"
            android:textColor="#FDFDFD" />

        <Button
            android:id="@+id/exercise2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:text="@string/breathing_exercise_2"
            android:fontFamily="@font/sofia_pro_bold"
            android:textColor="#FDFDFD" />

        <TextView
            android:id="@+id/exercises"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sofia_pro_bold"
            android:textSize="18sp"
            android:textColor="#E8E8E8"/>

    </LinearLayout>

</RelativeLayout>