<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Calorimeter">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/age"
                android:fontFamily="@font/sofia_pro_bold"
                android:textSize="24sp"
                android:textColor="#E8E8E8"/>

            <EditText
                android:id="@+id/enter_age"
                android:layout_width="144dp"
                android:layout_height="match_parent"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:textColor="#E8E8E8"
                android:fontFamily="@font/sofia_pro_bold"
                android:layout_marginLeft="80dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:layout_gravity="start"
                android:fontFamily="@font/sofia_pro_bold"
                android:textSize="24sp"
                android:textColor="#E8E8E8"/>

            <RadioButton
                android:id="@+id/male_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:fontFamily="@font/sofia_pro_bold"
                android:textSize="18sp"
                android:textColor="#E8E8E8"
                android:layout_marginLeft="40dp"/>

            <RadioButton
                android:id="@+id/female_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:fontFamily="@font/sofia_pro_bold"
                android:textSize="18sp"
                android:textColor="#E8E8E8"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:layout_gravity="start"
                android:fontFamily="@font/sofia_pro_bold"
                android:textSize="24sp"
                android:textColor="#E8E8E8"/>

            <EditText
                android:id="@+id/enter_height"
                android:layout_width="144dp"
                android:layout_height="match_parent"
                android:hint="in cm"
                android:textColorHint="#e8e8e8"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:textColor="#E8E8E8"
                android:fontFamily="@font/sofia_pro_bold"
                android:layout_marginLeft="60dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:layout_gravity="start"
                android:fontFamily="@font/sofia_pro_bold"
                android:textSize="24sp"
                android:textColor="#E8E8E8"/>

            <EditText
                android:id="@+id/enter_weight"
                android:layout_width="144dp"
                android:layout_height="match_parent"
                android:hint="in kg"
                android:textColorHint="#e8e8e8"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:textColor="#E8E8E8"
                android:fontFamily="@font/sofia_pro_bold"
                android:layout_marginLeft="60dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity"
                android:layout_gravity="start"
                android:fontFamily="@font/sofia_pro_bold"
                android:textSize="24sp"
                android:textColor="#E8E8E8"/>

            <Spinner
                android:id="@+id/activity_spinner"
                android:layout_width="144dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="60dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Exercise: 15-30 minutes of elevated heart rate activity. Intense exercise: 45-120 minutes of elevated heart rate activity. Very intense exercise: 2+ hours of elevated heart rate activity."
                android:fontFamily="@font/sofia_pro_bold"
                android:textColor="#E8E8E8"
                android:textSize="15sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/calculate"
                    android:background="@drawable/round_button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/calculate"
                    android:fontFamily="@font/sofia_pro_bold"
                    android:textColor="#FDFDFD"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

        </LinearLayout>


        <EditText
            android:id="@+id/position"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:visibility="invisible" />


    </LinearLayout>


</RelativeLayout>