<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".login_page">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_id"
                android:textColor="#E8E8E8"
                android:fontFamily="@font/sofia_pro_bold"
                android:textSize="36sp"
                android:layout_gravity="start"/>

            <EditText
                android:id="@+id/enter_username"
                android:textColor="#E8E8E8"
                android:fontFamily="@font/sofia_pro_bold"
                android:layout_width="144dp"
                android:layout_height="match_parent"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:layout_marginLeft="90dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#E8E8E8"
                android:fontFamily="@font/sofia_pro_bold"
                android:textSize="36sp"
                android:layout_gravity="start"/>

            <EditText
                android:id="@+id/enterpassword"
                android:textColor="#E8E8E8"
                android:fontFamily="@font/sofia_pro_bold"
                android:layout_width="144dp"
                android:layout_height="match_parent"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:layout_marginLeft="21dp"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <Button
                android:id="@+id/login_button"
                android:background="@drawable/round_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:fontFamily="@font/sofia_pro_bold"
                android:textColor="#FDFDFD"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have an account?"
                android:textColor="#E8E8E8"
                android:fontFamily="@font/sofia_pro_bold"
                android:textSize="18sp"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/register_button"
                android:background="@drawable/round_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:fontFamily="@font/sofia_pro_bold"
                android:textColor="#FDFDFD"
                android:layout_centerInParent="true"/>

        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>